unpackaged/main/default/objects/Library_Item_Rating__c/Library_Item_Rating__c.object-meta.xml
<CustomObject>
    <description>This would be used to rate the Library Items</description>
    <label>Library Item Rating</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Item Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Library Item Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>