unpackaged/main/default/objects/Library_Item_Rating__c/fields/Issued_To__c.field-meta.xml
<CustomField>
    <fullName>Issued_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Library Item Ratings</relationshipLabel>
    <relationshipName>Item_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>