unpackaged/main/default/objects/Library_Item_Rating__c/fields/Library_Item__c.field-meta.xml
<CustomField>
    <fullName>Library_Item__c</fullName>
    <label>Library Item</label>
    <referenceTo>Library_Item__c</referenceTo>
    <relationshipName>Item_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>