unpackaged/main/default/objects/Library_Item_Rating__c/fields/RatingNumber__c.field-meta.xml
<CustomField>
    <fullName>RatingNumber__c</fullName>
    <formula>Value(TEXT(Rate_Points__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RatingNumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>