unpackaged/main/default/objects/Library_Item_Rating__c/fields/Ratings__c.field-meta.xml
<CustomField>
    <fullName>Ratings__c</fullName>
    <formula>VALUE(Text(Rate_Points__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>